test/negative/internal_hxrt_helper_typed/Main.hx
class Main {
	static function main():Void {
		var helperType = hxrt.sys.NativeSys;
		trace(helperType);
	}
}
